# kitserver

./: .gitignore  CMakeLists.txt  README.md
doc/: history.txt  license.txt  manual.html  readme.txt
resources/: config.txt
resources/GDB/faces/: map.txt
resources/GDB/leagues/: map.txt
resources/GDB/uni/: map.txt
resources/GDB/uni/EPL/Arsenal/euro-ga/: config.txt
resources/GDB/uni/EPL/Arsenal/euro-gb/: config.txt
resources/GDB/uni/EPL/Arsenal/euro-pa/: config.txt
resources/GDB/uni/EPL/Arsenal/euro-pb/: config.txt
resources/GDB/uni/EPL/Arsenal/ga/: config.txt
resources/GDB/uni/EPL/Arsenal/gb/: config.txt
resources/GDB/uni/EPL/Arsenal/pa/: config.txt
resources/GDB/uni/EPL/Arsenal/pb/: config.txt
resources/GDB/uni/EPL/Chelsea/euro-pa/: config.txt
resources/GDB/uni/EPL/Chelsea/ga/: config.txt
resources/GDB/uni/EPL/Chelsea/pa/: config.txt
resources/GDB/uni/EPL/Chelsea/pb/: config.txt
resources/GDB/uni/National/Germany/ga/: config.txt
resources/GDB/uni/National/Germany/pa/: config.txt
resources/GDB/uni/National/Germany/pb/: config.txt
resources/GDB/uni/National/Russia/gb/: config.txt
resources/GDB/uni/National/Russia/pa/: config.txt
resources/GDB/uni/National/Russia/pb/: config.txt
resources/afs-root/example/: balls.txt
resources/example-root/: balls.txt  songs.txt
src/afs2fs/: CMakeLists.txt  afs2fs.cpp  afs2fs.h  afs2fs.rc  afs2fs_addr.h
src/afsio/: CMakeLists.txt  afsio.cpp  afsio.h  afsio.rc  afsio_addr.h  afsreader.cpp  afsreader.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h  camera.rc  camera_addr.h
src/config/: CMakeLists.txt  config.rc  lodcfg.cpp  lodcfg.h  lodcfgui.cpp  lodcfgui.h
src/fserv/: CMakeLists.txt  bal.h  fserv.cpp  fserv.h  fserv.rc  fserv_addr.h  replay.h
src/kload/: CMakeLists.txt  crc32.cpp  crc32.h  dllinit.h  hook.cpp  hook.h  hook_addr.h  kconf.h.in  kload.cpp  kload.h  kload.rc  kload_addr.h  kload_exp.h  log.cpp  log.h  player.h
src/kserv/: CMakeLists.txt  kserv.cpp  kserv.h  kserv.rc  kserv_addr.h  teaminfo.h
src/leagues/: CMakeLists.txt  leagues.cpp  leagues.h  leagues.rc  leagues_addr.h
src/lodmixer/: CMakeLists.txt  lodmixer.cpp  lodmixer.h  lodmixer.rc  lodmixer_addr.h
src/manager/: CMakeLists.txt  manager.cpp  manager.h  manager.rc  setupgui.cpp  setupgui.h
src/shared/: configs.cpp  configs.h  configs.hpp  detect.cpp  detect.h  gdb.cpp  gdb.h  imageutil.cpp  lang.cpp  lang.h  lang_eng.txt  manage.h  names.cpp  names.h  shared.h  vstyles.h
src/sides/: CMakeLists.txt  sides.cpp  sides.h  sides.rc  sides_addr.h
src/speeder/: CMakeLists.txt  speeder.cpp  speeder.h  speeder.rc  speeder_addr.h
